--- a/_posts/2016-06-09-progress.markdown
+++ b/_posts/2016-06-09-progress.markdown
@@ -3,7 +3,7 @@ layout: post
 comments: true
 title: "Progress!"
 date:   2016-06-09 09:00:00 -0500
-categories: personal update
+categories: game update
 ---
 Progress! So much progress!
 ---------------------------
